--- a/Lyst/WebContent/style.css
+++ b/Lyst/WebContent/style.css
@@ -59,7 +59,7 @@ html * {
 }
 
 .navbar-default {
-  background-color: #0c6ff4;
+  background-color: LightCoral;
   border-color: #ffffff;
   font-size: 22px;
 }
@@ -152,3 +152,8 @@ html * {
 .sortable tr {
     cursor: hand;
 }
+
+.wider_search {
+	width: 1000px;
+}
+
