--- a/Lyst/WebContent/style.css
+++ b/Lyst/WebContent/style.css
@@ -1,159 +1,132 @@
-.logoImage {
- 	height: 40%;
- 	width: 40%; 
-}
-
-.center_div{
-    margin: 0 auto;
-    width:100% /* value of your choice which suits your alignment */
-}
-
-.stylish-input-group .input-group-addon{
-    background: white !important;
-}
-
-.bottom-column
-{
-    float: none;
-    display: table-cell;
-    vertical-align: bottom;
-}
-
-.stylish-input-group button{
-    border:0;
-    background:transparent;
-}
-
-.rightAlign {
-	text-align: right;
-}
-
-.centerAlign {
-	text-align: center;
-}
-
-html * {
-	font-family: Arial;*/
-}
-
-
-.myrow {
-    font-size: 0;
-}
-.myrow > * {
-    float: none;
-    display: inline-block;
-    font-size: 14px; /* if using LESS it's quicker to just use @font-size-base */
-}
-.myrow > *:last-child {
-    vertical-align: center;
-}
-
-.navbar .navbar-nav {
-    display: inline-block;
-    float: none;
-}
-
-.navbar .navbar-collapse {
-    text-align: center;
-}
-
 .navbar-default {
-  background-color: LightCoral;
-  border-color: #ffffff;
-  font-size: 22px;
+	background-color: #E53030;
+	border-color: #f25858;
 }
+
 .navbar-default .navbar-brand {
-  color: #ffffff;
+	color: #ecf0f1;
 }
-.navbar-default .navbar-brand:hover,
-.navbar-default .navbar-brand:focus {
-  color: #040404;
+
+.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus
+	{
+	color: #ffbbbc;
 }
+
 .navbar-default .navbar-text {
-  color: #ffffff;
+	color: #ecf0f1;
 }
-.navbar-default .navbar-nav > li > a {
-  color: #ffffff;
+
+.navbar-default .navbar-nav>li>a {
+	color: #ecf0f1;
 }
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
-  color: #040404;
+
+.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus
+	{
+	color: #ffbbbc;
 }
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
-  color: #040404;
-  background-color: #ffffff;
+
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover,
+	.navbar-default .navbar-nav>.active>a:focus {
+	color: #ffbbbc;
+	background-color: #f25858;
 }
-.navbar-default .navbar-nav > .open > a,
-.navbar-default .navbar-nav > .open > a:hover,
-.navbar-default .navbar-nav > .open > a:focus {
-  color: #040404;
-  background-color: #ffffff;
+
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover,
+	.navbar-default .navbar-nav>.open>a:focus {
+	color: #ffbbbc;
+	background-color: #f25858;
 }
+
 .navbar-default .navbar-toggle {
-  border-color: #ffffff;
+	border-color: #f25858;
 }
-.navbar-default .navbar-toggle:hover,
-.navbar-default .navbar-toggle:focus {
-  background-color: #ffffff;
+
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus
+	{
+	background-color: #f25858;
 }
+
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: #ffffff;
+	background-color: #ecf0f1;
 }
-.navbar-default .navbar-collapse,
-.navbar-default .navbar-form {
-  border-color: #ffffff;
+
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+	border-color: #ecf0f1;
 }
+
 .navbar-default .navbar-link {
-  color: #ffffff;
+	color: #ecf0f1;
 }
+
 .navbar-default .navbar-link:hover {
-  color: #040404;
+	color: #ffbbbc;
 }
 
-@media (max-width: 767px) {
-  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-    color: #ffffff;
-  }
-  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
-  .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #040404;
-  }
-  .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
-  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
-  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #040404;
-    background-color: #ffffff;
-  }
+@media ( max-width : 767px) {
+	.navbar-default .navbar-nav .open .dropdown-menu>li>a {
+		color: #ecf0f1;
+	}
+	.navbar-default .navbar-nav .open .dropdown-menu>li>a:hover,
+		.navbar-default .navbar-nav .open .dropdown-menu>li>a:focus {
+		color: #ffbbbc;
+	}
+	.navbar-default .navbar-nav .open .dropdown-menu>.active>a,
+		.navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover,
+		.navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus {
+		color: #ffbbbc;
+		background-color: #f25858;
+	}
 }
 
-.table > tbody > tr > td {
-     vertical-align: middle;
-     color: black;
-     font-size: 22px;
+.searchbar {
+	display: inline-block;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	width: 450px;
+	height: 50px;
+	cursor: pointer;
+	padding: 0 20px;
+	overflow: hidden;
+	border: none;
+	font-size: 20px -webkit-border-radius: 21px;
+	border-radius: 21px;
+	color: rgba(255, 255, 255, 1);
+	background: rgba(0, 0, 0, 0.4);
+	text-decoration: normal;
+	-o-text-overflow: ellipsis;
+	text-overflow: ellipsis;
+	-webkit-box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.5) inset;
+	box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.5) inset;
+	-webkit-transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	-moz-transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	-o-transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
 }
 
-.table-left>tbody>tr:nth-child(odd)>td, 
-.table-left>tbody>tr:nth-child(odd)>th {
-    background-color: #AFC1DE;
+.searchbar:hover {
+	color: rgba(255, 255, 255, 1);
+	background: rgba(0, 0, 0, 0.4);
+	-webkit-transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	-moz-transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	-o-transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
 }
 
-.table-right>tbody>tr:nth-child(even)>td, 
-.table-right>tbody>tr:nth-child(even)>th {
-    background-color: #AFC1DE;
+.searchbar:focus {
+	width: 700px;
+	cursor: default;
+	padding: -13px 20px 0;
+	-webkit-transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	-moz-transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	-o-transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
 }
-
-.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
-  background-color: #AFC1DE;
+.parent {
+  position: relative;
 }
-
-.sortable tr {
-    cursor: hand;
+.child {
+  position: absolute;
+  top: 50%;
+  transform: translateY(50%);
 }
-
-.wider_search {
-	width: 1000px;
-}
-
