--- a/Lyst/WebContent/vsStyle.css
+++ b/Lyst/WebContent/vsStyle.css
@@ -6,8 +6,7 @@
 	vertical-align: bottom;
 }
 
-/* set a max-width for horizontal fluid layout and make it centered */
-.container-fluid {
+#main-body {
 	margin-right: auto;
 	margin-left: auto;
 	max-width: 1200px; /* or 950px */
@@ -128,59 +127,63 @@ h2 {
 	padding: 0 !important;
 	margin: 0 !important;
 }
+
 .btn-circle {
-  width: 30px;
-  height: 30px;
-  text-align: center;
-  padding: 6px 0;
-  font-size: 12px;
-  line-height: 1.428571429;
-  border-radius: 30px;
-  background:#E53030;
-    color:white;
+	width: 30px;
+	height: 30px;
+	text-align: center;
+	padding: 6px 0;
+	font-size: 12px;
+	line-height: 1.428571429;
+	border-radius: 30px;
+	background: #E53030;
+	color: white;
 }
+
 .btn-circle:hover {
-	color:black;
+	color: black;
 }
 
 .btn-circle.btn-xl {
-  width: 50px;
-  height: 50px;
-  padding: 10px 16px;
-  font-size: 24px;
-  line-height: 1.33;
-  border-radius: 70px;
-  text-align:center;
-  diplay:block;
-  position:relative;
-  box-shadow: 0px 3px 8px #aaa, inset 0px 2px 3px #fff;
-  
-}
-.glyphicon-repeat{
-	font-size:20px;
+	width: 50px;
+	height: 50px;
+	padding: 10px 16px;
+	font-size: 24px;
+	line-height: 1.33;
+	border-radius: 70px;
+	text-align: center;
+	diplay: block;
+	position: relative;
+	box-shadow: 0px 3px 8px #aaa, inset 0px 2px 3px #fff;
 }
 
-.glyphicon-th{
-	font-size:20px;
+.glyphicon-repeat {
+	font-size: 20px;
+}
+
+.glyphicon-th {
+	font-size: 20px;
 }
 
 .btn-circle:before {
-  content: "";
-  display: block;
-  background: #fff;
-  border-top: 2px solid #ddd;
-  position: absolute;
-  top: -8px;
-  left: -8px;
-  bottom: -8px;
-  right: -8px;
-  z-index: -1;
-  border-radius: 50%;
-  box-shadow: inset 0px 8px 48px #ddd;
+	content: "";
+	display: block;
+	background: #fff;
+	border-top: 2px solid #ddd;
+	position: absolute;
+	top: -8px;
+	left: -8px;
+	bottom: -8px;
+	right: -8px;
+	z-index: -1;
+	border-radius: 50%;
+	box-shadow: inset 0px 8px 48px #ddd;
 }
 
-.row-buffer { margin-bottom:20px; }
+.row-buffer {
+	margin-bottom: 20px;
+}
 
-h4{
-	font-size:10px;
+h4 {
+	font-size: 10px;
 }
