--- a/Lyst/WebContent/testCss.css
+++ b/Lyst/WebContent/testCss.css
@@ -1,50 +1,82 @@
-.btn-circle {
-  width: 30px;
-  height: 30px;
-  text-align: center;
-  padding: 6px 0;
-  font-size: 12px;
-  line-height: 1.428571429;
-  border-radius: 30px;
-  background:#E53030;
+/* entire container, keeps perspective */
+.flip-container {
+	perspective: 1000;
 }
-.btn-circle:hover {
-  color:black
+	/* flip the pane when hovered */
+	.flip-container:hover .flipper, .flip-container.hover .flipper {
+		transform: rotateY(180deg);
+	}
+	
+	/* Large desktops and laptops */
+@media ( min-width : 1200px) {
+	.flip-container, .front, .back {
+	width: 350px;
+	height: 350px;
 }
-
-.btn-circle.btn-xl {
-  width: 100px;
-  height: 100px;
-  padding: 10px 16px;
-  font-size: 24px;
-  line-height: 1.33;
-  border-radius: 70px;
-  text-align:center;
-  diplay:block;
-  position:relative;
-  box-shadow: 0px 3px 8px #aaa, inset 0px 2px 3px #fff;
-  color:white;
-  
-}
-.glyphicon-repeat{
-	font-size:50px;
 }
 
-.glyphicon-th{
-	font-size:50px;
+/* Landscape tablets and medium desktops */
+@media ( min-width : 992px) and (max-width: 1199px) {
+	.flip-container, .front, .back {
+	width: 250px;
+	height: 250px;
+}
 }
 
-.btn-circle:before {
-  content: "";
-  display: block;
-  background: #fff;
-  border-top: 2px solid #ddd;
-  position: absolute;
-  top: -18px;
-  left: -18px;
-  bottom: -18px;
-  right: -18px;
-  z-index: -1;
-  border-radius: 50%;
-  box-shadow: inset 0px 8px 48px #ddd;
+/* Portrait tablets and small desktops */
+@media ( min-width : 768px) and (max-width: 991px) {
+	.flip-container, .front, .back {
+	width: 250px;
+	height: 250px;
 }
+}
+
+/* Landscape phones and portrait tablets */
+@media ( max-width : 767px) {
+	.flip-container, .front, .back {
+	width: 150px;
+	height: 150px;
+}
+}
+
+/* Portrait phones and smaller */
+@media ( max-width : 480px) {
+.flip-container, .front, .back {
+	width: 100px;
+	height: 100px;
+}
+}
+
+/* flip speed goes here */
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+	backface-visibility: hidden;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+	z-index: 2;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+	transform: rotateY(180deg);
+}
+
+.flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
+	transform: rotateY(180deg);
+}
+
