--- a/Lyst/WebContent/vsStyle.css
+++ b/Lyst/WebContent/vsStyle.css
@@ -201,3 +201,86 @@ h4 {
 	height: 50px;
 	width: 50px;
 }
+
+/* entire container, keeps perspective */
+.flip-container {
+	perspective: 1000;
+}
+	/* flip the pane when hovered */
+	.flip-container:hover .flipper, .flip-container.hover .flipper {
+		transform: rotateY(180deg);
+	}
+	
+	/* Large desktops and laptops */
+@media ( min-width : 1200px) {
+	.flip-container, .front, .back {
+	width: 350px;
+	height: 350px;
+}
+}
+
+/* Landscape tablets and medium desktops */
+@media ( min-width : 992px) and (max-width: 1199px) {
+	.flip-container, .front, .back {
+	width: 250px;
+	height: 250px;
+}
+}
+
+/* Portrait tablets and small desktops */
+@media ( min-width : 768px) and (max-width: 991px) {
+	.flip-container, .front, .back {
+	width: 250px;
+	height: 250px;
+}
+}
+
+/* Landscape phones and portrait tablets */
+@media ( max-width : 767px) {
+	.flip-container, .front, .back {
+	width: 150px;
+	height: 150px;
+}
+}
+
+/* Portrait phones and smaller */
+@media ( max-width : 480px) {
+.flip-container, .front, .back {
+	width: 100px;
+	height: 100px;
+}
+}
+
+/* flip speed goes here */
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+	backface-visibility: hidden;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+	z-index: 2;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+	transform: rotateY(180deg);
+}
+
+.flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
+	transform: rotateY(180deg);
+}
+
