list page working

--- a/Lyst/WebContent/march29.css
+++ b/Lyst/WebContent/march29.css
@@ -8,6 +8,14 @@
 	padding: 0;
 }
 
+.list-item a {
+	width: 350px !IMPORTANT;
+}
+
+.list-item-parent {
+	width: 350px !IMPORTANT;
+}
+
  #top-nav.desk ul {
  	width: 200px;
  	position: absolute;
