--- a/Lyst/WebContent/Stylesheets/lists.css
+++ b/Lyst/WebContent/Stylesheets/lists.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #d9d9d9;
+	background-color: #ff6666;
 		font-family: Tahoma, Geneva, sans-serif;
 
 /* 	soft red : #FF5A5F;
@@ -12,17 +12,71 @@ body {
 	max-width: 500px;
 }
 
-.gray-desktop {
+.showlist-desktop {
 	color: #333333;
 	transition: all 0.2s ease;
 	height: 80px;
 	width: 100%;
-	font-size: 25px;
+	font-size: 18px;
 	font-weight: bold;
 	opacity: 0.8;
 	text-align: center;
 	font-variant: small-caps;
 	padding-top: 20px;
+	position: absolute;
+	bottom: 10px;
+}
+
+#categoryselect {
+	width: 120px;
+}
+
+.show-info {
+	color: #333333;
+	transition: all 0.2s ease;
+	font-size: 22px;
+	opacity: 0.8;
+	background-color: white;
+	position: absolute;
+	bottom: 90px;
+	display: none;
+	width: 97%;
+	line-height: 200%;
+}
+
+.show-info span {
+	transition: all 0.2s ease;
+	width: 100%;
+	display: inherit;	
+}
+
+@media (min-width: 500px) {
+	.showlist-desktop {
+		font-size: 25px;
+	
+	}
+	.item-desktop:hover > .show-info {
+		display: block;
+	}
+}
+
+button {
+	color: white;
+	background-color: #C20021;
+}
+
+.main-body {
+	background-color: white;
+	margin-left: 20px;
+	margin-right: 20px;
+	padding-top: 80px;
+}
+
+.navbar-default {
+	background-color: #ff6666;
+	border-color: #ff6666;
+	padding-top: 15px;
+	height: 60px;
 }
 
 
@@ -30,13 +84,17 @@ body {
 .item-desktop {
 	position: relative;
 	padding: 10px;
-	border: 1 px solid;
+/* 	padding-left: 10px;
+	padding-top: 10px;
+	padding-right: 10px; */
+	padding-bottom: 90px;
+	border: 7 px solid;
 	border-color: #808080;
-	background-color: white;
+ 	background-color: white;
 	-moz-box-shadow: 3px 3px 4px #cc3300;
 	-webkit-box-shadow: 3px 3px 4px #cc00cc;
 	box-shadow: 3px 3px 4px #000000;
-	
+	cursor: pointer;
 }
 
 .col-desk {
