--- a/Lyst/WebContent/vsStyle.css
+++ b/Lyst/WebContent/vsStyle.css
@@ -208,6 +208,12 @@ h2 {
 	margin-bottom: 20px;
 }
 
+.row-buffer-top{
+	margin-top: 50px;
+	pointer-events:none;
+}
+
+
 h4 {
 	font-size: 10px;
 }
