--- a/Lyst/WebContent/resultsStyle.css
+++ b/Lyst/WebContent/resultsStyle.css
@@ -1,37 +1,285 @@
-.positionRelativeContainer{
+.positionRelativeContainer {
 	position: relative;
 }
 
-.bannerOverlay{
+.bannerOverlay {
 	position: absolute;
-    left: 30%;
-    top:85%;
-    width: 40%;
-    height: 10%;
+	left: 30%;
+	top: 85%;
+	width: 40%;
+	height: 18%;
 }
 
 .numberCircle {
 	position: absolute;
-    left: 70%;
-    top:10%;
-/*     width: 12%; */
-/*     height: 15%; */
-width:50px;
-height:50px;
-    border-radius: 50%;
-    behavior: url(PIE.htc); /* remove if you don't care about IE8 */
-    color: white;
-    background: #C20021;
-    text-align: center;
+	left: 62%;
+	top: 8%;
+	/*     width: 12%; */
+	/*     height: 15%; */
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	behavior: url(PIE.htc); /* remove if you don't care about IE8 */
+	color: white;
+	background: #C20021;
+	text-align: center;
 }
-#ratingNumber{
+
+#ratingNumber {
 	font-size: 26px;
 	font-family: 'Black Ops One', cursive;
-	margin-left:-1px;
+	margin-left: -1px;
 	margin-top: 7px;
 }
 
-.test{
-	width:400px;
-	height:385px;
+.subTileText {
+	padding-top: 10px;
+	font-size: 24px;
+}
+
+.tile {
+	height: 250px;
+	max-width: 400px;
+	padding-top: 5px;
+	/*   display: inline-block; */
+	/*   box-sizing: border-box; */
+	background: #fff;
+	text-align: center;
+	margin-bottom: 30px;
+}
+
+.tile .title {
+	margin-top: 0px;
+	margin-bottom: 20px;
+	font-size: 48px;
+}
+
+.tile .itemName {
+	margin-top: 0px;
+	font-size: 20px;
+}
+
+.barTitle {
+	color: black;
+}
+
+.tile.purple, .tile.blue, .tile.red, .tile.orange, .tile.green {
+	color: #fff;
+}
+
+.tile.purple {
+	background: #5133AB;
+}
+
+.tile.purple:hover {
+	background: #3e2784;
+}
+
+.tile.red {
+	background: #d64541;
+}
+
+.tile.red:hover {
+	background: #d24d57;
+}
+
+.tile.green {
+	background: #26a65b;
+}
+
+.tile.green:hover {
+	background: #2ecc71;
+}
+
+.tile.blue {
+	background: #2672EC;
+}
+
+.tile.blue:hover {
+	background: #125acd;
+}
+
+.tile.orange {
+	background: #DC572E;
+}
+
+.tile.orange:hover {
+	background: #b8431f;
+}
+
+.progress {
+	background: rgba(255, 250, 250, 1);
+	border: 0px solid rgba(245, 245, 245, 1);
+	border-radius: 0px;
+	height: 35px;
+}
+
+.progress-bar-custom {
+	background: rgba(115, 102, 255, 1);
+}
+
+.progress-bar {
+	background-color: #1a1a1a;
+	height: 25px;
+	width: 100%;
+	padding: 5px;
+	/*     -moz-border-radius: 5px; */
+	/*     -webkit-border-radius: 5px; */
+	/*     border-radius: 5px; */
+	-moz-box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;
+	-webkit-box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;
+	box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;
+	position: relative;
+}
+
+.progress-bar span {
+	display: block;
+	height: 100%;
+	background-color: #777;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+	-moz-box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
+	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
+	box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
+	-webkit-transition: width .4s ease-in-out;
+	-moz-transition: width .4s ease-in-out;
+	-ms-transition: width .4s ease-in-out;
+	-o-transition: width .4s ease-in-out;
+	transition: width .4s ease-in-out;
+}
+
+.progress-bar .floatRight {
+	float: right;
+}
+
+.progress-bar .floatLeft {
+	float: left;
+}
+
+.blue span {
+	background-color: #34c2e3;
+}
+
+.pink span {
+	background-color: #D24D57;
+}
+
+/* Large desktops and laptops */
+@media
+(
+min-width
+:
+1200px)
+{
+.bannerOverlay {
+	font-size: 26px;
+}
+.resultImage {
+	width: 200px;
+	height: 200px;
+}
+.numberCircle {
+	width: 50px;
+	height: 50px;
+}
+
+}
+
+/* Landscape tablets and medium desktops */
+@media
+(
+min-width
+:
+992px)
+and
+(max-width:
+1199px)
+{
+.bannerOverlay {
+	font-size: 26px;
+}
+.resultImage {
+	width: 200px;
+	height: 200px;
+}
+.numberCircle {
+	width: 50px;
+	height: 50px;
+}
+
+}
+
+/* Portrait tablets and small desktops */
+@media
+(
+min-width
+:
+768px)
+and
+(max-width:
+991px)
+{
+.bannerOverlay {
+	font-size: 26px;
+}
+.resultImage {
+	width: 200px;
+	height: 200px;
+}
+.numberCircle {
+	width: 50px;
+	height: 50px;
+}
+
+}
+
+/* Landscape phones and portrait tablets */
+@media
+(
+max-width
+:
+767px)
+{
+.bannerOverlay {
+	font-size: 20px;
+}
+.resultImage {
+	width: 150px;
+	height: 150px;
+}
+.numberCircle {
+	width: 40px;
+	height: 40px;
+}
+#ratingNumber {
+	font-size: 20px;
+}
+
+}
+
+/* Portrait phones and smaller */
+@media
+(
+max-width
+:
+480px)
+{
+.bannerOverlay {
+	font-size: 12px;
+}
+.resultImage {
+	width: 150px;
+	height: 150px;
+}
+.numberCircle {
+	width: 30px;
+	height: 30px;
+	position: absolute;
+	left: 75%;
+	top: 5%;
+}
+#ratingNumber {
+	font-size: 16px;
+}
 }
