--- a/Lyst/WebContent/testCss.css
+++ b/Lyst/WebContent/testCss.css
@@ -1,18 +1,3 @@
-body {
-	background-color: #cccccc;
-/* 	background-color: #ff6666;
- */		font-family: Tahoma, Geneva, sans-serif;
-
-/* 	soft red : #FF5A5F;
-	selected : #C20021;
-	other red: #ff6666 */
-}
-
-/* .col-md-6 { */
-/* 	padding-bottom: 30px; */
-/* 	max-width: 500px; */
-/* } */
-
 
 .showlist-desktop {
 	color: #000000;
@@ -27,24 +12,24 @@ body {
 	position: absolute;
 }
 
-.imager{
-	width: 400px;
-	height:300px;
-}
+/* .imager{ */
+/* 	width: 400px; */
+/* 	height:300px; */
+/* } */
 
 
-#filterbutton {
-	border: none;
-	border-left: 2px solid;
-	border-color: #C20021;
-	height: 34px;
-	background-color: #FF5A5F;
+/* #filterbutton { */
+/* 	border: none; */
+/* 	border-left: 2px solid; */
+/* 	border-color: #C20021; */
+/* 	height: 34px; */
+/* 	background-color: #FF5A5F; */
 	
-}
+/* } */
 
-#filterbutton:hover {
-	background-color: #C20021;
-}
+/* #filterbutton:hover { */
+/* 	background-color: #C20021; */
+/* } */
 
 .show-info {
 	color: #333333;
