--- a/Lyst/WebContent/testCss.css
+++ b/Lyst/WebContent/testCss.css
@@ -1,87 +1,67 @@
-
-.showlist-desktop {
-	color: #000000;
-	transition: all 0.2s ease;
-	height: 80px;
-	width: 100%;
-	font-size: 18px;
-	font-weight: bold;
-	opacity: 0.8;
+.attributeBox {
 	text-align: center;
-	font-variant: small-caps;
-	position: absolute;
+	font-size: 20px;
+	display: inline-block;
 }
 
-/* .imager{ */
-/* 	width: 400px; */
-/* 	height:300px; */
-/* } */
-
-
-/* #filterbutton { */
-/* 	border: none; */
-/* 	border-left: 2px solid; */
-/* 	border-color: #C20021; */
-/* 	height: 34px; */
-/* 	background-color: #FF5A5F; */
-	
-/* } */
-
-/* #filterbutton:hover { */
-/* 	background-color: #C20021; */
-/* } */
-
-.show-info {
-	color: #333333;
-	transition: all 0.2s ease;
-	font-size: 22px;
-	opacity: 0.8;
-	background-color: white;
-	position: absolute;
-	bottom: 90px;
-	display: none;
-	width: 97%;
-	line-height: 200%;
+.positionRelativeContainer {
+	position: relative;
+	text-align: center;
 }
 
-.show-info span {
-	transition: all 0.2s ease;
-	width: 100%;
-	display: inherit;	
+.centerStuff {
+	display: inline-block;
 }
 
-@media (min-width: 500px) {
-	.showlist-desktop {
-		font-size: 25px;
-	
-	}
-	.item-desktop:hover > .show-info {
-		display: block;
-	}
+.listTitle{
+	font-size: 48px;
 }
 
-button {
-	color: white;
+.ratingsPanel {
+/* 	margin-top: 75px; */
 }
 
-.main-body {
-	background-color: white;
-	margin-left: 20px;
-	margin-right: 20px;
-	padding-top: 80px;
+.sortButton {
+	cursor: pointer;
 }
 
-.navbar-default {
-	background-color: #cccccc;
-	border-color: #cccccc;
-	padding-top: 15px;
-	height: 60px;
+.rowPadding {
+	padding-bottom: 6px;
 }
 
+.rowBuffs {
+	margin-bottom: 36px;
+}
 
+.itemInList {
+/* 	margin-top: 10px; */
+	border-bottom: solid #c0c0c0;
+}
 
-.item-desktop {
-	margin-top: 100px;
+span.redRating {
+	background: #C20021;
+	border-radius: 50%;
+	color: #ffffff;
+	display: inline-block;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: bold;
+	line-height: 50px;
+	text-align: center;
+	-webkit-box-shadow: 5px 5px 5px 0px rgba(50, 50, 50, 0.75);
+	-moz-box-shadow: 5px 5px 5px 0px rgba(50, 50, 50, 0.75);
+	box-shadow: 5px 5px 5px 0px rgba(50, 50, 50, 0.75);
+	-webkit-box-shadow: 5px 5px 5px 0px rgba(50, 50, 50, 0.75);
+}
+
+.itemBox {
+	padding: 0px;
+	margin: 0px;
+	text-align: center;
+	display: inline-block;
+}
+
+.hidden {
+	visibility: hidden !important;
 }
 
 .spinner {
@@ -138,3 +118,162 @@ button {
   }
 }
 
+/* Large desktops and laptops */
+@media ( min-width : 1200px) {
+	span.redRating {
+		width: 65px;
+		height: 65px;
+		font-size: 32px;
+	}
+	.ratingNumber {
+	margin-top: 8px;
+}
+.attributeBox{
+		margin-top: 40px;
+		cursor: pointer;
+}
+.itemName {
+	margin-top:75px;
+	color: black;
+}
+.listItemImage {
+	height: 200px;
+	width: 200px;
+	margin-top:-30px;
+}
+.numberText{
+	font-size: 18px;
+}
+}
+
+/* Landscape tablets and medium desktops */
+@media ( min-width : 992px) and (max-width: 1199px) {
+	span.redRating {
+		width: 55px;
+		height: 55px;
+		font-size: 28px;
+	}
+	.ratingNumber {
+	margin-top:5px;
+}
+.attributeBox{
+		margin-top: 40px;
+		cursor: pointer;
+}
+.itemName {
+	margin-top:75px;
+	font-size: 24px;
+	color: black;
+}
+.listItemImage {
+	height: 150px;
+	width: 150px;
+	margin-top:-30px;
+}
+.numberText{
+	font-size: 20px;
+}
+.attributeName{
+	font-size: 16px;
+}
+}
+
+/* Portrait tablets and small desktops */
+@media ( min-width : 768px) and (max-width: 991px) {
+	span.redRating {
+		width: 45px;
+		height: 45px;
+		font-size: 24px;
+	}
+	.ratingNumber {
+	margin-top: -2px;
+}
+.attributeBox{
+		margin-top: 40px;
+		cursor: pointer;
+}
+.itemName {
+	margin-top:75px;
+	color: black;
+}
+.listItemImage {
+	height: 100px;
+	width: 100px;
+	margin-top:-30px;
+	margin-left: 30px;
+}
+.itemName{
+	font-size: 18px;
+}
+.attributeName{
+	font-size: 12px;
+}
+.numberText{
+	font-size: 20px;
+}
+}
+
+/* Landscape phones and portrait tablets */
+@media
+(
+max-width
+:
+767px)
+{
+	span.redRating {
+		width: 45px;
+		height: 45px;
+		font-size: 24px;
+	}
+	.ratingNumber {
+	margin-top: 0px;
+}
+.attributeBox{
+		margin-top: 10px;
+		cursor: pointer;
+}
+.itemName{
+	margin-top: 0px;
+	color: black;
+}
+.attributeName{
+	font-size: 16px;
+}
+.listItemImage {
+	height: 200px;
+	width: 200px;
+}
+.numberText{
+	font-size: 32px;
+}
+}
+
+/* Portrait phones and smaller */
+@media ( max-width : 480px) {
+	span.redRating {
+		width: 26px;
+		height: 26px;
+		font-size:14px;
+	}
+	.ratingNumber {
+	margin-top: -12px;
+}
+.attributeName{
+	font-size: 8px;
+}
+.attributeBox{
+		margin-top: 5px;
+		cursor: pointer;
+}
+.itemName{
+	margin-top: 0px;
+	color: black;
+}
+.listItemImage {
+	height: 200px;
+	width: 200px;
+}
+.numberText{
+	font-size: 32px;
+}
+}
