--- a/Lyst/WebContent/Stylesheets/MenuStyle.css
+++ b/Lyst/WebContent/Stylesheets/MenuStyle.css
@@ -7,14 +7,6 @@
 	padding: 0;
 }
 
-.list-item a {
-	width: 350px !IMPORTANT;
-}
-
-.list-item-parent {
-	width: 350px !IMPORTANT;
-}
-
  #top-nav.desk ul {
  	width: 200px;
  	position: absolute;
@@ -24,20 +16,24 @@
  }
 #top-nav.desk li a {
 	padding: 5px 5px;
-	background: #FF5A5F;
-	border: 1px solid #eee;
-	color: #fff;
+	background: #FF3D3D;
+	text-align: center;
+	border: 1px solid white;
+	color: white;
 	height: 30px;
 	width: 200px;
 	font-size: 16px;}
 
-.selected {
-	background: #C20021 !important;
+.selected{
+	background: #CC3333 !important;
+	font-weight: bold;
 	}
 
 #top-nav.desk li a:hover {
-	background: #C20021;
+	background: #ffb3b3 !important;
+	color: black !important;
 	cursor: pointer;
+	text-decoration: none;
 }
  
 #top-nav.desk li ul {
@@ -68,7 +64,7 @@
 	top: 0;
 	left: 0;
 	z-index: 100;
-	background-color: #FF5A5F;
+	background-color: #FF3D3D;
 	padding: 0;	
 	margin: 0;
 }
@@ -81,7 +77,7 @@
 	top: 0;
 	left: 0;
 	z-index: 100;
-	background-color: #FF5A5F;
+	background-color: #FF3D3D;
 	margin: 0;
 	padding: 0;
 	
@@ -89,13 +85,14 @@
 #top-nav.mobile li {
 	text-align: center;
 	padding: 10px;
-	background-color: #FF5A5F;
+	background-color: #FF3D3D;
 	border-top: 1px solid #eee;
 }
 
 #top-nav.mobile li a {
 	font-size: 150%;
 	color: #fff;
+	text-align: center;
 	
 }
 
@@ -103,12 +100,13 @@
 	display: none; !important
 }
 
-.final li a {
-	padding: 5px 5px;
-	background: black;
-	border: 1px solid #eee;
-	color: #fff;
-	height: 30px;
-	width: 200px;
-	font-size: 16px;}
+.finalNode {
+	font-weight: bold;
+	text-align: center;
+}
 
+.finalNode:hover {
+	background: #ffb3b3 !important;
+	color: black !important;
+	cursor: pointer;
+}
