--- a/Lyst/WebContent/style.css
+++ b/Lyst/WebContent/style.css
@@ -1,134 +1,134 @@
-.navbar-default {
-	background-color: #C20021;
-	border-color: #C20021;
-}
-.navbar-default .navbar-brand {
-	color: #ecf0f1;
-}
+/* .navbar-default { */
+/* 	background-color: #C20021; */
+/* 	border-color: #C20021; */
+/* } */
+/* .navbar-default .navbar-brand { */
+/* 	color: #ecf0f1; */
+/* } */
 
-.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus
-	{
-	color: #ffbbbc;
-}
+/* .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus */
+/* 	{ */
+/* 	color: #ffbbbc; */
+/* } */
 
-.navbar-default .navbar-text {
-	color: #ecf0f1;
-}
+/* .navbar-default .navbar-text { */
+/* 	color: #ecf0f1; */
+/* } */
 
-.navbar-default .navbar-nav>li>a {
-	color: #ecf0f1;
-}
+/* .navbar-default .navbar-nav>li>a { */
+/* 	color: #ecf0f1; */
+/* } */
 
-.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus
-	{
-	color: #ffbbbc;
-}
+/* .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus */
+/* 	{ */
+/* 	color: #ffbbbc; */
+/* } */
 
-.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover,
-	.navbar-default .navbar-nav>.active>a:focus {
-	color: #ffbbbc;
-	background-color: #f25858;
-}
+/* .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, */
+/* 	.navbar-default .navbar-nav>.active>a:focus { */
+/* 	color: #ffbbbc; */
+/* 	background-color: #f25858; */
+/* } */
 
-.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover,
-	.navbar-default .navbar-nav>.open>a:focus {
-	color: #ffbbbc;
-	background-color: #f25858;
-}
+/* .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, */
+/* 	.navbar-default .navbar-nav>.open>a:focus { */
+/* 	color: #ffbbbc; */
+/* 	background-color: #f25858; */
+/* } */
 
-.navbar-default .navbar-toggle {
-	border-color: #f25858;
-}
+/* .navbar-default .navbar-toggle { */
+/* 	border-color: #f25858; */
+/* } */
 
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus
-	{
-	background-color: #f25858;
-}
+/* .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus */
+/* 	{ */
+/* 	background-color: #f25858; */
+/* } */
 
-.navbar-default .navbar-toggle .icon-bar {
-	background-color: #ecf0f1;
-}
+/* .navbar-default .navbar-toggle .icon-bar { */
+/* 	background-color: #ecf0f1; */
+/* } */
 
-.navbar-default .navbar-collapse, .navbar-default .navbar-form {
-	border-color: #ecf0f1;
-}
+/* .navbar-default .navbar-collapse, .navbar-default .navbar-form { */
+/* 	border-color: #ecf0f1; */
+/* } */
 
-.navbar-default .navbar-link {
-	color: #ecf0f1;
-}
+/* .navbar-default .navbar-link { */
+/* 	color: #ecf0f1; */
+/* } */
 
-.navbar-default .navbar-link:hover {
-	color: #ffbbbc;
-}
+/* .navbar-default .navbar-link:hover { */
+/* 	color: #ffbbbc; */
+/* } */
 
-@media ( max-width : 767px) {
-	.navbar-default .navbar-nav .open .dropdown-menu>li>a {
-		color: #ecf0f1;
-	}
-	.navbar-default .navbar-nav .open .dropdown-menu>li>a:hover,
-		.navbar-default .navbar-nav .open .dropdown-menu>li>a:focus {
-		color: #ffbbbc;
-	}
-	.navbar-default .navbar-nav .open .dropdown-menu>.active>a,
-		.navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover,
-		.navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus {
-		color: #ffbbbc;
-		background-color: #f25858;
-	}
-}
+/* @media ( max-width : 767px) { */
+/* 	.navbar-default .navbar-nav .open .dropdown-menu>li>a { */
+/* 		color: #ecf0f1; */
+/* 	} */
+/* 	.navbar-default .navbar-nav .open .dropdown-menu>li>a:hover, */
+/* 		.navbar-default .navbar-nav .open .dropdown-menu>li>a:focus { */
+/* 		color: #ffbbbc; */
+/* 	} */
+/* 	.navbar-default .navbar-nav .open .dropdown-menu>.active>a, */
+/* 		.navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover, */
+/* 		.navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus { */
+/* 		color: #ffbbbc; */
+/* 		background-color: #f25858; */
+/* 	} */
+/* } */
 
-.searchbar {
-	display: inline-block;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	width: 700px;
-	height: 50px;
-	cursor: pointer;
-	padding: 0 20px;
-	overflow: hidden;
-	border: none;
-	font-size: 20px -webkit-border-radius: 21px;
-	border-radius: 21px;
-	color: rgba(0, 0, 0, .8);
-	background: rgba(255, 255, 255, 1);
-	text-decoration: normal;
-	-o-text-overflow: ellipsis;
-	text-overflow: ellipsis;
-	-webkit-box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.5) inset;
-	box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.5) inset;
-	-webkit-transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-	-moz-transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-	-o-transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-	transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-}
+/* .searchbar { */
+/* 	display: inline-block; */
+/* 	-webkit-box-sizing: border-box; */
+/* 	-moz-box-sizing: border-box; */
+/* 	box-sizing: border-box; */
+/* 	width: 700px; */
+/* 	height: 50px; */
+/* 	cursor: pointer; */
+/* 	padding: 0 20px; */
+/* 	overflow: hidden; */
+/* 	border: none; */
+/* 	font-size: 20px -webkit-border-radius: 21px; */
+/* 	border-radius: 21px; */
+/* 	color: rgba(0, 0, 0, .8); */
+/* 	background: rgba(255, 255, 255, 1); */
+/* 	text-decoration: normal; */
+/* 	-o-text-overflow: ellipsis; */
+/* 	text-overflow: ellipsis; */
+/* 	-webkit-box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.5) inset; */
+/* 	box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.5) inset; */
+/* 	-webkit-transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75); */
+/* 	-moz-transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75); */
+/* 	-o-transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75); */
+/* 	transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75); */
+/* } */
 
-.searchbar:hover {
-	color: rgba(0, 0, 0, .8);
-	background: rgba(255, 255, 255, 1);
-	-webkit-transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-	-moz-transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-	-o-transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-	transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-}
+/* .searchbar:hover { */
+/* 	color: rgba(0, 0, 0, .8); */
+/* 	background: rgba(255, 255, 255, 1); */
+/* 	-webkit-transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75); */
+/* 	-moz-transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75); */
+/* 	-o-transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75); */
+/* 	transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75); */
+/* } */
 
-.searchbar:focus {
-	width: 750px;
-	cursor: default;
-	padding: -13px 20px 0;
-	-webkit-transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-	-moz-transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-	-o-transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-	transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-}
-.parent {
-  position: relative;
-}
-.child {
-  position: absolute;
-  top: 50%;
-  transform: translateY(50%);
-}
+/* .searchbar:focus { */
+/* 	width: 750px; */
+/* 	cursor: default; */
+/* 	padding: -13px 20px 0; */
+/* 	-webkit-transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75); */
+/* 	-moz-transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75); */
+/* 	-o-transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75); */
+/* 	transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75); */
+/* } */
+/* .parent { */
+/*   position: relative; */
+/* } */
+/* .child { */
+/*   position: absolute; */
+/*   top: 50%; */
+/*   transform: translateY(50%); */
+/* } */
 /* Large desktops and laptops */
 @media ( min-width : 1200px) {
 .topButton{
