--- a/Lyst/WebContent/style.css
+++ b/Lyst/WebContent/style.css
@@ -1,6 +1,6 @@
 /* .navbar-default { */
-/* 	background-color: #C20021; */
-/* 	border-color: #C20021; */
+/* 	background-color: #913D88; */
+/* 	border-color: #913D88; */
 /* } */
 /* .navbar-default .navbar-brand { */
 /* 	color: #ecf0f1; */
