--- a/Lyst/WebContent/testCss.css
+++ b/Lyst/WebContent/testCss.css
@@ -39,7 +39,7 @@
 }
 
 span.redRating {
-	background: #C20021;
+	background: #913D88;
 	border-radius: 50%;
 	color: #ffffff;
 	display: inline-block;
