--- a/Lyst/WebContent/sliderStyle.css
+++ b/Lyst/WebContent/sliderStyle.css
@@ -300,7 +300,7 @@
         the new label colours shown */
 .ui-slider-pips [class*=ui-slider-pip-initial] {
   font-weight: bold;
-  color: red;
+  color: purple;
 }
 
 .ui-slider-pips .ui-slider-pip-initial-2 {
@@ -396,7 +396,7 @@
 #circles-slider.ui-slider {
   margin-top: 24px;
   height: 6px;
-  background: linear-gradient(to right, #990000 0%, #ff1a1a 32%, #ffcccc 50%, #ff1a1a 84%, #990000 100%);
+  background: linear-gradient(to right, #5E0A55 0%, #913D88 32%, #913D88 50%, #913D88 84%, #5E0A55 100%);
   border: none;
   border-radius: 0; }
 
@@ -405,6 +405,8 @@
     border: none;
     border-radius: 100%;
     transition: box-shadow 0.2s ease; }
+    
+    #circles-slider .ui-slider-handle:focus { outline:0 !important; }
     
     #circles-slider.ui-slider .ui-slider-handle.ui-state-hover, 
     #circles-slider.ui-slider .ui-slider-handle.ui-state-focus, 
@@ -431,7 +433,7 @@
 	font-size: 12px;
 	line-height: 1.428571429;
 	border-radius: 30px;
-	background: #C20021;
+	background: #913D88;
 	color: white;
 }
 
